# scrapy-scraper

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/scrapy_scraper/: main.py  scrapy_scraper.py  user_agents.txt
src/scrapy_scraper/utils/: array.py  config.py  cookie.py  directory.py  file.py  general.py  header.py  scrape.py  stopwatch.py  url.py  validate.py
