[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapy-scraper"
version = "1.4"
authors = [{ name = "Ivan Sincek" }]
description = "Web crawler and scraper based on Scrapy and Playwright's headless browser."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]
dependencies = ["argparse>=1.4.0", "beautifulsoup4>=4.11.1", "bs4>=0.0.1", "colorama>=0.4.6", "datetime>=5.2", "jsbeautifier>=1.14.11", "scrapy>=2.11.0", "termcolor>=1.1.0", "tldextract>=3.6.0"]

[project.urls]
"Homepage" = "https://github.com/ivan-sincek/scrapy-scraper"

[project.scripts]
scrapy-scraper = "scrapy_scraper.scrapy_scraper:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["user_agents.txt"]
