[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapy-scraper"
version = "2.4"
authors = [{ name = "Ivan Sincek" }]
description = "Web crawler and scraper based on Scrapy and Playwright's headless browser."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]
dependencies = [
	"beautifulsoup4>=4.12.3",
	"bs4>=0.0.1",
	"colorama>=0.4.6",
	"jsbeautifier>=1.14.11",
	"playwright>=1.47.0",
	"scrapy>=2.11.0",
	"scrapy-playwright>=0.0.32",
	"termcolor>=2.4.0",
	"tldextract>=3.6.0"
]

[project.urls]
"Homepage" = "https://github.com/ivan-sincek/scrapy-scraper"

[project.scripts]
scrapy-scraper = "scrapy_scraper.scrapy_scraper:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["user_agents.txt"]
